--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit==1.25.0
 pillow==9.5.0  # Ensure it's less than version 10
-numpy==1.21.0
-pandas==1.3.3
-pip-24.3.1
+streamlit
+setuptools
+pip==24.3.1
+
